--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,7 @@ dependencies = [
     # mase-triton is automatically installed on Linux x86_64
     # On other platforms, install manually if needed: pip install mase-triton
     "mase-triton>=0.0.6.post4; platform_machine == 'x86_64' and sys_platform == 'linux'",
+    "fev>=0.7.0",
 ]
 
 [build-system]
